#3156 Fixed: layout issue on fancybox with long notes.

--- a/trunk/eea.dataservice/trunk/eea/dataservice/browser/stylesheet/view.css
+++ b/trunk/eea.dataservice/trunk/eea/dataservice/browser/stylesheet/view.css
@@ -1,69 +1,5 @@
 /* Update fancybox images paths
 */
-div#fancy_loading div {
-  background: transparent url(../../++resource++fancybox/fancy_progress.png) no-repeat;
-}
-
-div#fancy_loading_icon {
-  background: url(../../++resource++fancybox/fancy_loading.gif) no-repeat;
-}
-
-div#fancy_close {
-  background: url(../../++resource++fancybox/fancy_closebox.png) top left no-repeat;
-}
-
-span#fancy_left_ico {
-  background: transparent url(../../++resource++fancybox/fancy_left.png) no-repeat;
-}
-
-span#fancy_right_ico {
-  background: transparent url(../../++resource++fancybox/fancy_right.png) no-repeat;
-}
-
-div.fancy_bg_n {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_n.png) repeat-x;
-}
-
-div.fancy_bg_ne {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_ne.png) no-repeat;
-}
-
-div.fancy_bg_e {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_e.png) repeat-y;
-}
-
-div.fancy_bg_se {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_se.png) no-repeat;
-}
-
-div.fancy_bg_s {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_s.png) repeat-x;
-}
-
-div.fancy_bg_sw {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_sw.png) no-repeat;
-}
-
-div.fancy_bg_w {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_w.png) repeat-y;
-}
-
-div.fancy_bg_nw {
-  background: transparent url(../../++resource++fancybox/fancy_shadow_nw.png) no-repeat;
-}
-
-td#fancy_title_left {
-  background: transparent url(../../++resource++fancybox/fancy_title_left.png) repeat-x;
-}
-
-td#fancy_title_main {
-  background: transparent url(../../++resource++fancybox/fancy_title_main.png) repeat-x;
-}
-
-td#fancy_title_right {
-  background: transparent url(../../++resource++fancybox/fancy_title_right.png) repeat-x;
-}
-
 span#fancybox-left-ico {
   left: 1em;
 }
@@ -84,6 +20,44 @@ a#fancybox-left, a#fancybox-right {
   width: 5em;
 }
 
+/* Fancybox title */
+#fancybox-title-wrap {
+  background-color: #000000;
+  border: 2px solid #ffffff;
+  padding: 1em;
+  opacity: 0.7;
+  /* for IE */
+  filter:alpha(opacity=70);
+  /* CSS3 standard */
+  display: block;
+}
+
+#fancybox-title-wrap span {
+  float: none;
+  height: auto;
+}
+
+#fancybox-title-left {
+  display: none;
+}
+
+#fancybox-title-right {
+  display: none;
+}
+
+#fancybox-title-main {
+  background: none;
+  line-height: 20px;
+}
+
+#fancybox-title {
+}
+
+.fancybox-title-outside {
+  padding-top: 0;
+}
+
+/* */
 #figures-fancyimage {
   margin: 2em 5em;
 }
